[gd_scene load_steps=8 format=3 uid="uid://bronoe2p580sf"]

[ext_resource type="Script" path="res://dialogic/cutscene/cutscene14C.gd" id="1_4js64"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwwtj"]
size = Vector2(309, 195)

[sub_resource type="Animation" id="Animation_3uu3n"]
resource_name = "cutscene1"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 4.9, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"proxy_disable_player_input_for_cutscene"
}, {
"args": ["run"],
"method": &"proxy_play_player_visual_animation"
}, {
"args": ["idle"],
"method": &"proxy_play_player_visual_animation"
}, {
"args": [],
"method": &"_start_dialogic_from_animation"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1],
"method": &"proxy_set_player_face_direction"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(-1578, -427), 5.0, 1, 1],
"method": &"proxy_move_player_to_position"
}]
}

[sub_resource type="Animation" id="Animation_4t64i"]
resource_name = "cutscene1.1"
length = 2.0
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["idle"],
"method": &"proxy_play_player_visual_animation"
}]
}

[sub_resource type="Animation" id="Animation_x330y"]
resource_name = "cutscene2"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [-1],
"method": &"proxy_set_player_face_direction"
}, {
"args": [],
"method": &"proxy_enable_player_input_after_cutscene"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cywr2"]
_data = {
"cutscene1": SubResource("Animation_3uu3n"),
"cutscene1.1": SubResource("Animation_4t64i"),
"cutscene2": SubResource("Animation_x330y")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1io0"]
size = Vector2(20, 417.25)

[node name="cutscene14C" type="Area2D" groups=["replica_boss_cutscene"]]
position = Vector2(79, 74)
script = ExtResource("1_4js64")
boss_barriers = Array[NodePath]([NodePath("BarrierLeft"), NodePath("BarrierRight")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, -26)
shape = SubResource("RectangleShape2D_xwwtj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cywr2")
}

[node name="BossCamera2D" type="Camera2D" parent="."]
position = Vector2(9, -58)
zoom = Vector2(0.7, 0.7)

[node name="npc1" type="Sprite2D" parent="."]

[node name="BossSpawnMarker" type="Marker2D" parent="."]
position = Vector2(113, 46)

[node name="BossTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" groups=["boss1_cutscene"]]
visible = false
modulate = Color(0.380392, 0.380392, 0.380392, 0.784314)
offset_left = 256.0
offset_right = 320.0
offset_bottom = 32.0

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
offset_left = 280.0
offset_top = 8.0
offset_right = 320.0
offset_bottom = 21.0
text = "Time"
metadata/_edit_use_anchors_ = true

[node name="BarrierLeft" type="StaticBody2D" parent="." groups=["barrier"]]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarrierLeft"]
position = Vector2(-231, -130)
shape = SubResource("RectangleShape2D_a1io0")

[node name="BarrierRight" type="StaticBody2D" parent="." groups=["barrier"]]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarrierRight"]
position = Vector2(249, -130)
shape = SubResource("RectangleShape2D_a1io0")

[node name="HealthSpawnMarker" type="Marker2D" parent="."]
position = Vector2(-7, -202)

[node name="HealthTimer" type="Timer" parent="."]
wait_time = 60.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
